manifests/service.yml
  
apiVersion: v1
kind: Service
metadata:
  name: imghoard
  namespace: miki
spec:
  selector:
    app: imghoard
  ports:
  - port: 80
    targetPort: 80
