manifests/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: imghoard-ingress
spec:
  routes:
    - match: Host(`api.miki.bot`) && PathPrefix(`/images`)
      kind: Rule
      services:
        - kind: Service
          name: imghoard
          port: 80
